# yolo-openai-detector

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  MANIFEST.md  PROJECT_CHARTER.md  README.md  pyproject.toml
docs/: api-contract.md  architecture.md  compatibility-matrix.md  dependency-policy.md  release-checklist.md  roadmap.md  security.md  testing-strategy.md
docs/adr/: 0001-product-boundary.md  0002-openai-compatible-chat-completions.md  0003-base64-data-url-only.md  0004-cpu-only-inference.md
docs/handoffs/: README.md
docs/prompts/: strategic-review-template.md
docs/reviews/: README.md
docs/work-orders/: 0001-api-skeleton.md  0002-image-parser.md  0003-cpu-yolo-detection.md  0004-openai-sdk-smoke-and-docs.md  0005-packaging-deployment.md
src/yolo_openai_detector/: __init__.py  auth.py  config.py  detector.py  image_input.py  main.py  openai_compat.py  yolo_detector.py
tests/: test_api_skeleton.py
