[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "yolo-openai-detector"
version = "0.0.0"
description = "CPU-only single-image YOLO detector behind a narrow OpenAI-compatible API"
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "Project owner" }
]
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "pydantic>=2.7",
  "pydantic-settings>=2.2",
  "pillow>=10.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "httpx>=0.27",
  "ruff>=0.5",
  "mypy>=1.10"
]
inference = [
  # Add only after human approval of backend and license implications.
  # "ultralytics>=8.3"
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
ignore = []

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
